--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           dinâmica, aplicada por professores qualificados e acessíveis.</p>
         <button type="button" class="btn btn-outline-warning">Matricule-se já!</button>
       </div>
-      <div class="container-fluid" style="max-width: 345px;">
-        <img src="imagens/capa.png" class="img-fluid" alt="">
+      <div class="container-fluid" style="max-width: 400px;">
+        <img src="imagens/capa.svg" class="img-fluid" alt="">
       </div>
     </section>
 
@@ -135,6 +135,7 @@
             <img src="imagens/profs/pedro.png" class="d-block w-100" alt="...">
           </div>
         </div>
+        
         <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -241,8 +242,28 @@
     </div>
   </div>
 </div>
-
+<br>
+<section class="feedback" style="background-color: #52CFF4;">
+  <img src="imagens/FEEDBACK.png" class="img-fluid" style="width: 700px;" alt="...">
+</section>
   </main>
+  <footer>
+    <img src="imagens/logo hey you.png" class="logo" alt="Logo">
+    <p class="text">As ilustrações foram criadas usando recursos do Flaticon.com</p>
+    <div class="container">
+      <div class="row social-icons">
+        <div class="col-md-1">
+          <img src="imagens/icones-redes-sociais/1.svg" alt="Imagem 1">
+        </div>
+        <div class="col-md-1">
+          <img src="imagens/icones-redes-sociais/2.svg" alt="Imagem 2">
+        </div>
+        <div class="col-md-1">
+          <img src="imagens/icones-redes-sociais/3.svg" alt="Imagem 3">
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
