--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 style="width: 55px;">
               <div class="card-body">
                 <h5 class="card-title">Metodologias Ativas</h5>
-                <p class="card-text">As aulas baseadas na Andragogia que estimulam a autonomia e participação dos
-                  alunos, com o objetivo de levar à comunicação e interação.</p>
+                <p class="card-text">Aulas para adultos, baseadas na Andragogia. Utilizando a gamificação e estimulando a interação, comunicação e autonomia.</p>
               </div>
             </div>
           </div>
@@ -82,19 +81,17 @@
                 style="width: 55px;">
               <div class="card-body">
                 <h5 class="card-title">Políticas Afirmativas</h5>
-                <p class="card-text">Lorem Ipsum is simply dummy text of the printing. <br> Lorem Ipsum is simply dummy
-                  text of the printing.</p>
+                <p class="card-text">Pessoas transgênero têm acesso às Turmas Regulares por 45% (80,00) do valor corrente e taxa de matrícula zero.</p>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card text-center">
+            <div class="card text-center" style="height: 178px;">
               <img src="imagens/abouthy/certificado de nivel.svg" class="card-img-top mx-auto mt-3" alt="..."
                 style="width: 55px;">
               <div class="card-body">
                 <h5 class="card-title">Certificado de Nível</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content.</p>
+                <p class="card-text">Ao fim de cada nível, você só precisa fazer a solicitação do documento junto à coordenação.</p>
               </div>
             </div>
           </div>
@@ -104,8 +101,8 @@
                 style="width: 55px;">
               <div class="card-body">
                 <h5 class="card-title">Teste de Nivelamento</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Quer se matricular mas não sabe em qual turma? Agende seu teste de nivelamento!
+                  Nosso teste acontece via chamada de video com um de nossos professores.</p>
               </div>
             </div>
           </div>
@@ -114,7 +111,7 @@
     </section>
     <br><br>
     <section class="equipehy">
-      <div id="carouselExampleDark" class="carousel carousel-dark slide imagens-prof mx-auto" style="width: 800px;" data-bs-ride="carousel">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide imagens-prof mx-auto" style="max-width: 800px;" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -150,7 +147,7 @@
     <section class="turmashy">
       <div>
         <h1 class="turmashy-titulo">Nossas turmas</h1>
-        <p class="turmashy-paragrafo">As aulas são ministradas em tempo real via GOOGLE MEET.</p>
+        <p class="turmashy-paragrafo">As aulas são ministradas em tempo real via GOOGLE MEET. Cada curso regular dura 3 anos, sendo os níveis Basico 1, básico 2, básico 3, Intermediário 1, Intermediário 2 e Avançado. A aprovação em um nível é requerimento para cursar o nível seguinte. </p>
       </div>
       <img class="horarios" src="imagens/horários.png" alt="">
    
