--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container-fluid">
         <h1 class="abouthy-titulo">Sobre a Hey You</h1>
         <p class="abouthy-paragrafo">Fundada em fevereiro de 2021 pela Prof. Me. Tárcila Duarte, a Hey You
-          Idiomas é uma escola online que oferece <br> o ensino remoto de Inglês, Francês e Espanhol para adultos, com
+          Idiomas é uma escola online que oferece o ensino remoto de Inglês, Francês e Espanhol para adultos, com
           foco no público LGBTQIA+.</p>
         <button type="button" class="btn btn-primary btn-sm">Acesse o manual do aluno</button>
       </div>
