--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 </section>
   </main>
   <footer>
-    <img src="imagens/logo hey you.png" class="logo" alt="Logo">
+    <img src="imagens/logo hey you.png" class="logo" alt="Logo" style="width: 60px;">
     <p class="text">As ilustrações foram criadas usando recursos do Flaticon.com</p>
     <div class="container">
       <div class="row social-icons">
