--- a/index.html
+++ b/index.html
@@ -184,24 +184,24 @@
       </section> -->
       
       <section class="valores container-fluid d-flex flex-wrap justify-content-center">
-          <div class="card sessao-valor col-8 col-md-4 mb-4">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item card-title-valores fw-bold">TURMAS REGULARES</li>
-              <li class="list-group-item card-text-valores">
-                <br> - Cada aula tem duração de 1h15min. No caso de turmas que se
-                encontram 1x por semana, cada encontro dura 2h30min.<br>
-                - Avaliação a cada 12 aulas, sendo 3 avaliações por semestre, que consistem majoritariamente em teste oral e
-                teste escrito.<br>
-                - Turmas são formadas a partir de 3 pessoas, com o máximo de 7 alunos.</li>
-              <li class="list-group-item card-valor">R$ 180,00</li>
-              <div class="card-footer card-final text-center">
-                <a href="#" class="btn botao-matricula btn-light fw-bold">MATRICULE-SE JÁ!</a>
-              <li class="list-group-item card-valor" style="margin-bottom: 9px;"></li>
-              </div>
-            </ul>
-          </div>
+            <div class="card sessao-valor col-8 col-md-4 mb-4" style="margin-top: 30px;">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item card-title-valores fw-bold">TURMAS REGULARES</li>
+                <li class="list-group-item card-text-valores">
+                  <br> - Cada aula tem duração de 1h15min. No caso de turmas que se
+                  encontram 1x por semana, cada encontro dura 2h30min.<br>
+                  - Avaliação a cada 12 aulas, sendo 3 avaliações por semestre, que consistem majoritariamente em teste oral e
+                  teste escrito.<br>
+                  - Turmas são formadas a partir de 3 pessoas, com o máximo de 7 alunos.</li>
+                <li class="list-group-item card-valor">R$ 180,00</li>
+                <div class="card-footer card-final text-center">
+                  <a href="#" class="btn botao-matricula btn-light fw-bold">MATRICULE-SE JÁ!</a>
+                <li class="list-group-item card-valor" style="margin-bottom: 9px;"></li>
+                </div>
+              </ul>
+            </div>
       
-        <div class="card sessao-valor col-8 col-md-4 mb-4">
+        <div class="card sessao-valor col-8 col-md-4 mb-4" style="margin-top: 30px;">
           <ul class="list-group list-group-flush">
             <li class="list-group-item card-title-valores fw-bold">AULAS VIP</li>
             <li class="list-group-item card-text-valores">
