--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="#">Professores</a>
           </li>
         </ul>
-        <button class="btn btn-outline-primary" type="submit">Já é aluno? Clique aqui!</button>
+        <button class="btn btn-outline-primary disabled" type="submit">Já é aluno? Clique aqui!</button>
       </div>
     </div>
   </nav>
@@ -60,7 +60,7 @@
         <p class="abouthy-paragrafo">Fundada em fevereiro de 2021 pela Prof. Me. Tárcila Duarte, a Hey You
           Idiomas é uma escola online que oferece o ensino remoto de Inglês, Francês e Espanhol para adultos, com
           foco no público LGBTQIA+.</p>
-        <button type="button" class="btn btn-primary btn-sm">Acesse o manual do aluno</button>
+        <button type="button" class="btn btn-primary btn-sm" style="font-size: 15px;">Acesse o manual do aluno</button>
       </div>
       <br>
       <div class="container-fluid">
