--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mx-auto me-2">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Início</a>
           </li>
@@ -35,21 +35,21 @@
             <a class="nav-link" href="#">Professores</a>
           </li>
         </ul>
-        <button class="btn btn-outline-primary disabled" type="submit">Já é aluno? Clique aqui!</button>
+        <!-- <button class="btn btn-outline-primary disabled" type="submit">Já é aluno? Clique aqui!</button> -->
       </div>
     </div>
   </nav>
-
+  
   <main>
     <section class="container-start d-flex">
       <div class="container-fluid" style="width: 50%;">
         <h1 class="titulo-capa">Conquiste a liberdade <br> que só a fluência te dá!</h1>
-        <p class="paragrafo-capa">A HY transforma o sonho bilíngue de pessoas do mundo <br>
-          inteiro em realidade, através de uma abordagem humanizada e <br>
+        <p class="paragrafo-capa">A HY transforma o sonho bilíngue de pessoas do mundo
+          inteiro em realidade, através de uma abordagem humanizada e
           dinâmica, aplicada por professores qualificados e acessíveis.</p>
         <button type="button" class="btn btn-outline-warning">Matricule-se já!</button>
       </div>
-      <div class="container-fluid" style="max-width: 400px;">
+      <div class="container-fluid" style="max-width: 450px; min-width: 350px;">
         <img src="imagens/capa.svg" class="img-fluid" alt="">
       </div>
     </section>
