--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <br>
       <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 30px; margin-right: 30px;">
           <div class="col">
             <div class="card text-center">
               <img src="imagens/abouthy/metodologias ativas.svg" class="card-img-top mx-auto mt-3" alt="..."
