--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <br>
       <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 30px; margin-right: 30px;">
+        <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 10px; margin-right: 10px;">
           <div class="col">
             <div class="card text-center">
               <img src="imagens/abouthy/metodologias ativas.svg" class="card-img-top mx-auto mt-3" alt="..."
@@ -113,10 +113,10 @@
     <section class="equipehy">
       <div id="carouselExampleDark" class="carousel carousel-dark slide imagens-prof mx-auto" style="max-width: 800px;" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" style="margin-top: 20px;"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2" style="margin-top: 20px;"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"style="margin-top: 20px;"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3" style="margin-top: 20px;"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
